# ru2zh

./: .gitattributes  .gitignore  LICENSE  README.md  config.yaml  install.bat  pyproject.toml  requirements-cuda-win.txt  requirements-dev.txt  requirements.txt  start_webui.bat  transcribe.bat
scripts/: check_env.py  convert_nllb.py  download_models.py  install_windows.py
src/ru2zh/: __init__.py  asr.py  cli.py  config.py  datatypes.py  exporters.py  pipeline.py  runtime.py  textutils.py  webui.py
src/ru2zh/translate/: __init__.py  base.py  llm_api.py  nllb_ct2.py
tests/: test_config.py  test_exporters.py  test_llm_api.py  test_pipeline_smoke.py  test_runtime.py  test_textutils.py  test_webui_smoke.py
